move movie mock data into repository